<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_rename"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="Rename" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Delete" />
</menu>