<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerCreateNewWorkout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewWorkout">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigationCreateWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPagerCreateWorkout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navigationCreateWorkout"
        android:layout_below="@id/buttonFinish"
        />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="finish"/>

</RelativeLayout>